Fix weird schedule overflow

--- a/src/sass/schedule.scss
+++ b/src/sass/schedule.scss
@@ -299,6 +299,11 @@
   top: auto
 }
 
+.schedule-overlay {
+  max-height: 100px;
+  overflow: auto;
+}
+
 .schedule .schedule-wrapper .schedule-inner .schedule-overlay {
   position: absolute;
   background: #FFF;
@@ -312,7 +317,6 @@
   z-index: 3;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
   border-radius: 0.5em;
-  max-height: initial !important;
 }
 
 .schedule .schedule-wrapper .schedule-inner .schedule-overlay strong {
